# FTX_to_MySQL

./: .env.example  Cargo.toml  README.md  create_database.py  setting.py
src/: lib.rs  main.rs  models.rs  schema.rs
src/ftx/rest/: mod.rs
src/ftx/rest/model/: fills.rs
src/ftx/ws/: error.rs  mod.rs  model.rs  tests.rs
