[package]
name = "FTX_to_MySQL"
version = "0.1.0"
edition = "2021"

keywords = ["exchange", "trading", "crypto", "market"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql"] }
chrono = {version = "^0.4.19", features = ["serde"]}
crc32fast = "^1.2.1"
dotenv = "^0.15.0"
futures = {version = "0.3", optional = true}
hex = "^0.4.3"
hmac-sha256 = "^0.1.7"
http = "0.2"
log = "^0.4.14"
reqwest = {version = "^0.11.3", features = ["json"]}
rust_decimal = "^1.13.0"
rust_decimal_macros = "^1.14.1"
serde = {version = "^1.0.125", features = ["derive"]}
serde_json = "^1.0.64"
serde_qs = "0.8"
serde_with = {version = "^1.9.1", features = ["chrono"]}
thiserror = "1"
tokio = {version = "^1.5.0", features = ["full"], optional = true}
tokio-tungstenite = {version = "^0.14.0", features = ["native-tls"], optional = true}
anyhow = "1.0.40"


[dev-dependencies]
env_logger = "^0.9.0"
tokio = {version = "^1.5.0", features = ["full"]}

[features]
default = ["ws"]
ws = ["tokio-tungstenite", "tokio", "futures"]
